--- a/letsgo_app/frontend/src/CSS/SignUp.css
+++ b/letsgo_app/frontend/src/CSS/SignUp.css
@@ -1,71 +1,84 @@
 html {
     background-color: #F2DDC7;
+    background-image: url("./background.jpg");
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    overflow: hidden;
 }
-
+​
 .mainPage {
     text-align: left;
-    margin: 10% 35%;
+    margin: 5% 30% 10% 30%;
+    background: rgba(255,255,255,.9);
+    padding: 55px;
+    border-radius: 40px;
 }
-
+​
 label {
     display: block;
     padding-bottom: 10px;
     font-size: 20px;
 }
-
+​
 input {
     width: 100%;
 }
-
+​
 .signUp > nav > .link {
     padding-left: .5em;
     padding-right: .5em;
 }
-
+​
 .signUp > nav > .link:hover {
     color: #AABCA4
 }
-
+​
 .signUp > nav > .link:visited {
     color: #E99332
 }
-
+​
 nav {
     position: absolute;
     right: 0;
     top: 7px;
 }
-
+​
 button {
     border: 2px solid #EBCBA8;
     transition-duration: 0.4s;
     border-radius: 5px;
+    font-size: 13px;
+    padding: 1.5px 20px;
+    margin-top: 15px;
 }
-
+​
 button:hover {
     background-color: #E99332;
     color: white;
 }
-
-.signUp > .mainPage > img {
+​
+.signUp > .mainPage > .logo {
     object-fit: cover;
-    margin: -15px -100px 0px -35px;
-    width: 250px;
-    height: 150px;
+    margin: -30px -100px 0px -35px;
+    width: 360px;
+    height: 200px;
     overflow: hidden;
 }
-
+​
 .signUp > .mainPage > h1 {
     margin: 10px 0px -20px 0px;
     text-align: right;
 }
-
+​
 .signUp > .mainPage > p {
     font-size: 50px;
     margin: 0px;
     text-align: right;
+    font-weight: bold;
 }
-
+​
 .signUp > .mainPage > form {
     margin-top: 40px;
 }
