finalize signup css

--- a/letsgo_app/frontend/src/CSS/SignUp.css
+++ b/letsgo_app/frontend/src/CSS/SignUp.css
@@ -1,13 +1,21 @@
 html {
     background-color: #F2DDC7;
-    /* background-image: url("./background.jpg"); */
+    background-image: url("./background.jpg");
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: auto 100%;
     overflow: hidden;
 }
-​
+
+img {
+    object-fit: cover;
+    margin: -50px -100px -5px -35px;
+    width: 360px;
+    height: 200px;
+    overflow: hidden;
+}
+
 .mainPage {
     text-align: left;
     margin: 5% 30% 10% 30%;
@@ -15,36 +23,36 @@ html {
     padding: 55px;
     border-radius: 40px;
 }
-​
+
 label {
     display: block;
     padding-bottom: 10px;
     font-size: 20px;
 }
-​
+
 input {
     width: 100%;
 }
-​
-.signUp > nav > .link {
+
+.link {
     padding-left: .5em;
     padding-right: .5em;
 }
-​
-.signUp > nav > .link:hover {
-    color: #AABCA4
+
+.link:hover {
+    color: #AABCA4;
 }
-​
-.signUp > nav > .link:visited {
-    color: #E99332
+
+.link:visited {
+    color: #E99332;
 }
-​
+
 nav {
     position: absolute;
     right: 0;
     top: 7px;
 }
-​
+
 button {
     border: 2px solid #EBCBA8;
     transition-duration: 0.4s;
@@ -53,32 +61,24 @@ button {
     padding: 1.5px 20px;
     margin-top: 15px;
 }
-​
+
 button:hover {
     background-color: #E99332;
     color: white;
 }
-​
-.signUp > .mainPage > .logo {
-    object-fit: cover;
-    margin: -30px -100px 0px -35px;
-    width: 360px;
-    height: 200px;
-    overflow: hidden;
-}
-​
-.signUp > .mainPage > h1 {
+
+h1 {
     margin: 10px 0px -20px 0px;
     text-align: right;
 }
-​
-.signUp > .mainPage > p {
+
+p {
     font-size: 50px;
     margin: 0px;
     text-align: right;
     font-weight: bold;
 }
-​
-.signUp > .mainPage > form {
+
+form {
     margin-top: 40px;
 }
