--- a/letsgo_app/frontend/src/CSS/LogIn.css
+++ b/letsgo_app/frontend/src/CSS/LogIn.css
@@ -1,3 +1,24 @@
+
+.loginOfficial {
+    padding: 1px;
+    /* opacity: 0.5; */
+    background-image: url("../pics/login1.png");
+    background-repeat: no-repeat;
+    background-size: 980px 550px;
+}
+
 .logIn {
     text-align: center;
+    /* height: 100%; */
+    max-width: 300px;
+    height: 200px;
+	padding: 10px 20px;
+	background: green;
+	margin: 10px auto;
+	padding: 20px;
+	background: #f4f7f8;
+	border-radius: 9px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    opacity: 1.0;
+  
 }
