--- a/letsgo_app/frontend/src/CSS/SignUp.css
+++ b/letsgo_app/frontend/src/CSS/SignUp.css
@@ -1,6 +1,6 @@
 html {
     background-color: #F2DDC7;
-    background-image: url("./background.jpg");
+    /* background-image: url("./background.jpg"); */
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
