--- a/letsgo_app/frontend/src/CSS/Upload.css
+++ b/letsgo_app/frontend/src/CSS/Upload.css
@@ -1,3 +1,72 @@
-/* .upload {
+.wholePage {
+    background-color: #F2DDC7;
+    background-image: url("./background.jpg");
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    overflow: hidden;
+}
 
-} */
+.mainPage {
+    text-align: left;
+    margin: 5% 30% 10% 30%;
+    background: rgba(255,255,255,.9);
+    padding: 55px;
+    border-radius: 40px;
+    margin-top: 40px;
+}
+
+label {
+    display: block;
+    padding-bottom: 10px;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+input {
+    width: 100%;
+}
+
+.link:hover {
+    color: #AABCA4;
+}
+
+.link:visited {
+    color: #E99332;
+}
+
+.nav {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    top: 0;
+}
+
+.link {
+    position: fixed;
+    right: 0;
+    top: 7px;
+}
+
+.navLink {
+    padding-left: .5em;
+    padding-right: .5em;
+}
+
+.search {
+    position: fixed;
+    margin-left: 7px;
+    margin-bottom: 10px;
+}
+
+button:hover {
+    background-color: #E99332;
+    color: white;
+}
+
+h3 {
+    margin: 10px 0px 30px 0px;
+    text-align: right;
+    font-size: 50px;
+}
