--- a/letsgo_app/frontend/src/CSS/Homepage.css
+++ b/letsgo_app/frontend/src/CSS/Homepage.css
@@ -1,44 +1,87 @@
+
+
+
 .split {
-    height: 100%;
-    position: fixed;
-    padding-top: 20px;
-    /* display: inline-block; */
+  height: 100%;
+  position: static;
+  padding-top: 20px;
+  /* display: inline-block; */
+}
+
+.userInfoContainer {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .userInfo {
-    background-color: #436A89;
-    left: 0;
-    width: 30%;
+  background-color: #3399ff;
+  width: 66%;
+}
+
+
+div.userInfo.split > div > div.loggedUser{
+    position: fixed;
+    text-align: center;
+}
+
+div.feed.split > div.hashtags{
+    display: inline-flex;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+div.feed.split > div.hashtags > p{
+    margin: 3px;
 }
 
 .feed {
-    background-color: #ECECEC;
-    right: 0;
-    width: 70%;
+  background-color: #ececec;
+  right: 0;
+  width: 70%;
+}
+
+div.userInfo.split > div > div > img {
+  height: 125px;
+  width: 100px;
+}
+
+div.feed.split > div.individualPost{
+    text-align: left;
+    font-family: 'advent pro medium';
+    margin: 18px;
+}
+
+div.feed.split > div.individualPost > h4{
+    margin: auto;
+}
+
+div.userInfo.split > div > div > p {
+  font-style: oblique;
 }
 
 .navbar {
-    display: flex;
-    height: 100%;
-    padding: 4px;
-    background-color: #EBCBA8;
+  display: flex;
+  height: 100%;
+  padding: 23px;
+  background-color: tomato;
+  top: 0;
+  position: sticky;
 }
 
 .navbar > .allLinks > .link {
-    padding-left: 1.5em;
-    padding-right: 1em;
-    color: black;
+  padding-left: 1.5em;
+  padding-right: 1em;
+  color: black;
 }
 
 .navbar > .allLinks > .link:hover {
-    color: #E99332;
+  color: blue;
 }
 
 .navbar > .allLinks > .link:visited {
-    color: #6D7869;
+  color: black;
 }
 
 .navbar > .allLinks {
-    position: absolute;
-    right: 0;
+  position: absolute;
+  right: 0;
 }
