--- a/letsgo_app/frontend/src/CSS/Upload.css
+++ b/letsgo_app/frontend/src/CSS/Upload.css
@@ -1,11 +1,12 @@
 .wholePage {
     background-color: #F2DDC7;
-    background-image: url("./background.jpg");
+    background-image: url("./Travel-Photography.jpg");
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: 100% auto;
     overflow: hidden;
+    height: 100vh;
 }
 
 .mainPage {
@@ -56,8 +57,7 @@ input {
 
 .search {
     position: fixed;
-    margin-left: 7px;
-    margin-bottom: 10px;
+    margin: -10px 0px 0px 30px;
 }
 
 button:hover {
