--- a/letsgo_app/frontend/src/CSS/Homepage.css
+++ b/letsgo_app/frontend/src/CSS/Homepage.css
@@ -91,8 +91,7 @@ div.userInfo.split > div > div > p {
   background-color: #FE914E;
   top: 0;
   position: sticky;
-  box-shadow: 10px 10px 5px grey;
-  border-radius: 10px;
+  box-shadow: 4px 5px 4px darkgrey;
 }
 
 .navbar > .allLinks > .link {
