--- a/letsgo_app/frontend/src/CSS/Homepage.css
+++ b/letsgo_app/frontend/src/CSS/Homepage.css
@@ -96,6 +96,11 @@ div.feed.split > div.individualPost > p{
   box-shadow: 3px 5px #234748;
 }
 
+nav > div.allLinks{
+  margin-right: 3%;
+}
+
+
 .navbar > .allLinks > .link:hover {
   border-style: inset;
   background-color: #3D9BAC;
@@ -103,6 +108,9 @@ div.feed.split > div.individualPost > p{
 
 nav > div.form > form > button:hover {
   background-color: #3D9BAC;
+}
+div.userInfo.split{
+  box-shadow: 0px 15px 15px #5C6458;
 }
 
 div.userInfo.split > div > div > img{
@@ -154,6 +162,10 @@ nav > div.form > form > input[type=text]{
   box-shadow: 3px 5px #5C6458;
   border-radius: 25px;
   margin-top: 7%;
+}
+
+nav > div.form{
+  margin-left: 1%;
 }
 
 nav > div.form > form > button{
