--- a/letsgo_app/frontend/src/CSS/SignUp.css
+++ b/letsgo_app/frontend/src/CSS/SignUp.css
@@ -1,20 +1,20 @@
-html {
+/* html {
     background-color: #F2DDC7;
-    background-image: url("./background.jpg");
+    background-image: url("./background.jpg"); 
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: auto 100%;
     overflow: hidden;
-}
+}  */
 
-img {
+/* img {
     object-fit: cover;
     margin: -50px -100px -5px -35px;
     width: 360px;
     height: 200px;
     overflow: hidden;
-}
+} */
 
 .mainPage {
     text-align: left;
@@ -54,7 +54,7 @@ nav {
 }
 
 button {
-    border: 2px solid #EBCBA8;
+    /* border: 2px solid #EBCBA8; */
     transition-duration: 0.4s;
     border-radius: 5px;
     font-size: 13px;
@@ -63,7 +63,7 @@ button {
 }
 
 button:hover {
-    background-color: #E99332;
+    /* background-color: #E99332; */
     color: white;
 }
 
