--- a/letsgo_app/frontend/src/CSS/Homepage.css
+++ b/letsgo_app/frontend/src/CSS/Homepage.css
@@ -69,7 +69,7 @@ div.feed.split > div.individualPost > img{
 div.feed.split > div.individualPost > h4{
     margin: auto;
     text-transform: capitalize;
-    text-shadow: 2px 2px #FE914E;
+    text-shadow: 2px 2px grey;
 }
 
 div.feed.split > div.individualPost > p{
@@ -182,6 +182,11 @@ nav > div.form > form > button{
   position: absolute;
   right: 0;
   margin-top: 1%;
+}
+div.feed.split > button{
+  box-shadow: 3px 5px #5C6458;
+  border-radius: 25px;
+  margin-top: 2%;
 }
 
 @media screen and (max-width:800px) {
