updates css for login

--- a/letsgo_app/frontend/src/CSS/LogIn.css
+++ b/letsgo_app/frontend/src/CSS/LogIn.css
@@ -1,12 +1,122 @@
+*{
+  margin:0;
+  padding: 0;
+}
+
+.mainDiv{
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+}
+
+.logInForm{
+  text-align: center;
+  height: 100%;
+  max-width: 300px;
+  height: 400px;
+  padding: 40px;
+  background-color: #fe914e;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  opacity: 0.7;
+  border-radius: 20px;
+  overflow: hidden;
+  z-index: 1;
+}
+button{
+  border: 2px solid teal;
+  transition-duration: 0.4s;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 1.5px 20px;
+  margin-top: 15px;
+}
+
+.headDiv{
+  display: grid;
+}
+
+.rightDiv{
+  justify-content: space-evenly;
+  float: right;
+}
+
+.letsGoDiv{
+  padding-bottom: 40px;
+  font-family: "Cookie", cursive;
+  padding-bottom: -30px;
+  color: teal;
+}
+
+.theWorldDiv{
+  padding-left: 50px;
+  color: white;
+}
+.formContainer{
+  font-size: 3rem;
+}
+.formContainer ::placeholder{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 16px;
+  color: teal;
+  pointer-events: none;
+  transition: all 0.5s ease-in-out;
+}
+.formContainer input{
+  border: 0;
+  border-bottom: 1px solid white;
+  background: transparent;
+  width: 100%;
+  padding: 8px 0 5px 0;
+  font-size: 16px;
+}
+
+.formContainer input:focus{
+  border: none;
+  outline: none;
+  border-bottom: 1px solid whitesmoke;
+}
+
+.stylePassword .icon{
+  position: absolute;
+  right: 1em;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.stylePassword{
+  border-style: solid;
+}
+.form__instylePasswordput:valid{
+  border-color: forestgreen;
+}
+.stylePassword:valid+ .icon::after{
+  content: "🛫";
+}
+.stylePassword:valid{
+  border-color: firebrick;
+}
+.stylePassword:invalid +.icon::after{
+  content: "🛬";
+}
+.logInForm{
+  color: whitesmoke;
+}
+/* * 
+
 * {
   margin: 0;
   padding: 0;
 }
+
+
+
 .mainDiv {
   height: 100vh;
   display: grid;
   justify-content: center;
 }
+
 ​ ​ .logInForm {
   text-align: center;
   height: 100%;
@@ -18,7 +128,9 @@
   opacity: 0.7;
   border-radius: 20px;
   overflow: hidden;
+  z-index: 1;
 }
+
 ​ button {
   border: 2px solid teal;
   transition-duration: 0.4s;
@@ -64,7 +176,118 @@
   width: 100%;
   padding: 8px 0 5px 0;
   font-size: 16px;
-  /* color:#e74c3c;  */
+}
+​ .formContainer input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid whitesmoke;
+}
+​ .stylePassword .icon {
+  position: absolute;
+  right: 1em;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.stylePassword {
+  border-style: solid;
+}
+
+.form__instylePasswordput:valid {
+  border-color: forestgreen;
+}
+
+.stylePassword:valid + .icon::after {
+  content: "🛫";
+}
+
+.stylePassword:invalid {
+  border-color: firebrick;
+}
+
+.stylePassword:invalid + .icon::after {
+  content: "🛬";
+}
+​ .logoForLogin {
+  color: whitesmoke;
+} */
+
+
+
+
+
+/* * {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.mainDiv {
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+}
+
+​ ​ .logInForm {
+  text-align: center;
+  height: 100%;
+  max-width: 300px;
+  height: 400px;
+  padding: 40px;
+  background-color: #fe914e;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  opacity: 0.7;
+  border-radius: 20px;
+  overflow: hidden;
+  z-index: 1;
+}
+
+​ button {
+  border: 2px solid teal;
+  transition-duration: 0.4s;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 1.5px 20px;
+  margin-top: 15px;
+}
+​ .headDiv {
+  display: grid;
+}
+​ ​ .rightDiv {
+  justify-content: space-evenly;
+  float: right;
+}
+​ ​ .letsGoDiv {
+  padding-bottom: 40px;
+  font-family: "Cookie", cursive;
+  padding-bottom: -30px;
+  color: teal;
+}
+​ .theWorldDiv {
+  padding-left: 50px;
+  color: white;
+}
+​ .formContainer {
+  font-size: 3rem;
+}
+​ .formContainer ::placeholder {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 16px;
+  color: teal;
+
+  pointer-events: none;
+  transition: all 0.5s ease-in-out;
+}
+.formContainer input {
+  border: 0;
+  border-bottom: 1px solid white;
+  background: transparent;
+  width: 100%;
+  padding: 8px 0 5px 0;
+  font-size: 16px;
 }
 ​ .formContainer input:focus {
   border: none;
@@ -100,3 +323,110 @@
 ​ .logoForLogin {
   color: whitesmoke;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.mainDiv {
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+}
+
+​ ​ .logInForm {
+  text-align: center;
+  height: 100%;
+  max-width: 300px;
+  height: 400px;
+  padding: 40px;
+  background-color: #fe914e;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  opacity: 0.7;
+  border-radius: 20px;
+  overflow: hidden;
+  z-index: 1;
+}
+
+​ button {
+  border: 2px solid teal;
+  transition-duration: 0.4s;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 1.5px 20px;
+  margin-top: 15px;
+}
+​ .headDiv {
+  display: grid;
+}
+​ ​ .rightDiv {
+  justify-content: space-evenly;
+  float: right;
+}
+​ ​ .letsGoDiv {
+  padding-bottom: 40px;
+  font-family: "Cookie", cursive;
+  padding-bottom: -30px;
+  color: teal;
+}
+​ .theWorldDiv {
+  padding-left: 50px;
+  color: white;
+}
+​ .formContainer {
+  font-size: 3rem;
+}
+​ .formContainer ::placeholder {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 16px;
+  color: teal;
+
+  pointer-events: none;
+  transition: all 0.5s ease-in-out;
+}
+.formContainer input {
+  border: 0;
+  border-bottom: 1px solid white;
+  background: transparent;
+  width: 100%;
+  padding: 8px 0 5px 0;
+  font-size: 16px;
+}
+​ .formContainer input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid whitesmoke;
+}
+​ .stylePassword .icon {
+  position: absolute;
+  right: 1em;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.stylePassword {
+  border-style: solid;
+}
+
+.form__instylePasswordput:valid {
+  border-color: forestgreen;
+}
+
+.stylePassword:valid + .icon::after {
+  content: "🛫";
+}
+
+.stylePassword:invalid {
+  border-color: firebrick;
+}
+
+.stylePassword:invalid + .icon::after {
+  content: "🛬";
+}
+​ .logoForLogin {
+  color: whitesmoke;
+} */
